--- a/_posts/2020-10-07-Mybatis.md
+++ b/_posts/2020-10-07-Mybatis.md
@@ -174,7 +174,7 @@ tags: ORM
 
 - UserMapper.xml
 
-```
+```xml
 <?xml version="1.0" encoding="UTF-8" ?>
 <!DOCTYPE mapper
     PUBLIC "-//mybatis.org//DTD Mapper 3.0//EN"
